--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,55 @@
 body {
+    border: 10px solid #333;
     height: 95vh;
     width: 95;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    color: rgb(44, 139, 44);
+    background-color: #9bc503;
+}
+
+canvas{
+    border: 1px solid green;
+    box-shadow: 0 8px 10px -2px black;
+}
+
+.title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: sans-serif;
+    width: 100%;
+    text-align: center;
+    color: white;
+    padding: 5px;
+    margin-top: 10px;
+}
+
+.flexible{
+    background-color: #4aa82f;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.flexible img{
+    padding: 5px;
+}
+
+h2{
+    color:red;
+}
+
+#act{
+    font-family: sans-serif;
+    font-size: 20px;
+    visibility: hidden;
+}
+
+#act active{
+    font-family: sans-serif;
+    font-size: 30px;
+    visibility: visible;
 }
