--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,12 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: #9bc503;
+    background-color: #ecf0f1;
 }
 
 canvas{
-    border: 1px solid green;
+    margin-top: -10px;
+    border: 2px solid blue;
     box-shadow: 0 8px 10px -2px black;
 }
 
@@ -22,8 +23,7 @@ canvas{
     width: 100%;
     text-align: center;
     color: white;
-    padding: 5px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .flexible{
@@ -32,6 +32,7 @@ canvas{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 35px;
 }
 
 .flexible img{
@@ -42,14 +43,6 @@ h2{
     color:red;
 }
 
-#act{
-    font-family: sans-serif;
-    font-size: 20px;
-    visibility: hidden;
-}
-
-#act active{
-    font-family: sans-serif;
-    font-size: 30px;
-    visibility: visible;
+#gameOver{
+    margin-top: 30px;
 }
